# card-to-speach

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  audio.webm  audio_base64.txt  converter.py  converter_corrigido.ipynb  docker-compose.yml  gop.py  main.py  meu_audio.webm  mp3To64.py  prof.out  pyproject.toml  run.txt  security_analysis.md  temp.py  temp_streamlit.py  test_chat_service_integration.py  test_get_all_decks.py  verify_import.py
.github/workflows/: build.yml
app/: __init__.py  config.py  db.py  evaluate.py  evaluate_temp.py  repositories.py  schemas.py  services.py  time_utils.py
app/mcp/: mcp_client.py  mcp_server.py  tools.py
app/models/: word_segment.py
app/services/: alignment_service.py  audio_service.py  auth_service.py  chat_service.py  evaluate.py  other_services.py  pron_evaluator.py  service_pb2.py  service_pb2_grpc.py  text_to_speech.py  transcription_service.py  user_service.py
app/utils/: b64.py  decks.py  files.py
tests/: conftest.py  test_1_decks_crud_integrity.py  test_alignment_service.py  test_api_robustness.py  test_auth.py  test_cards_crud.py  test_cards_due_pagination.py  test_gop_module.py  test_grade_bounds_and_min_ef_and_lapses.py  test_normalize_day_start.py  test_normalize_toggle.py  test_overdue.py  test_performance_basic.py  test_reviews.py  test_security_fixes.py  test_selection_priority_filters.py  test_sm2_after_graduation.py  test_time_timezone.py
tests/data/: golden_small.json
