[project]
name = "mini-elsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.1",
    "grpcio-tools>=1.76.0",
    "grpcio>=1.76.0",
    "google-auth>=2.43.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.2",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "protobuf>=6.33.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "supermemo2>=3.0.1",
    "uvicorn>=0.38.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["uploads*", "gravacoes*", "temp_files*", "words_by_ctc*", "tests*"]
